[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/MainMenu.gd" type="Script" id=1]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="buttons" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 128.0
margin_right = -128.0
margin_bottom = -128.0

[node name="name_field" type="LineEdit" parent="buttons"]
margin_right = 256.0
margin_bottom = 24.0
text = "unnamed"
align = 1

[node name="host_btn" type="Button" parent="buttons"]
margin_top = 28.0
margin_right = 256.0
margin_bottom = 48.0
text = "Host"

[node name="ip_field" type="LineEdit" parent="buttons"]
margin_top = 52.0
margin_right = 256.0
margin_bottom = 76.0
text = "localhost"
align = 1

[node name="join_btn" type="Button" parent="buttons"]
margin_top = 80.0
margin_right = 256.0
margin_bottom = 100.0
text = "Join"
